--- a/client/src/global.css
+++ b/client/src/global.css
@@ -8,18 +8,27 @@ h1 {
   margin-bottom: 0.5em;
 }
 
-h2 {
-  margin-top: 1em;
-  margin-bottom: 0.5em;
-}
-
 input[type="text"] {
+  line-height: 2em;
   padding: 0.5em;
   margin: 0.5em;
 }
 
+button {
+  padding: 0.7em 1.5em;
+  background: var(--success);
+  border: none;
+  color: white;
+}
+
 .wrapper {
   max-width: 80rem;
-  background: white;
   min-height: 100vh;
+}
+
+section {
+  background: white;
+  max-width: 50rem;
+  padding: 1rem;
+  margin: 1rem auto;
 }
