--- a/client/src/global.css
+++ b/client/src/global.css
@@ -6,12 +6,25 @@ body {
   background: var(--grey);
 }
 
-button {
+button, input {
   font-family: 'Permanent Marker', cursive;
+}
+
+code {
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.2em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  text-align: center;
 }
 
 h1 {
   margin-top: 1em;
+  margin-bottom: 0.5em;
+}
+
+h2 {
   margin-bottom: 0.5em;
 }
 
@@ -34,7 +47,7 @@ button {
   min-height: 100vh;
 }
 
-section {
+section, aside {
   background: white;
   max-width: 50rem;
   padding: 1rem;
