Prevent starting an invalid game

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -42,6 +42,13 @@ button {
 
 button.negative {
   background: var(--failure);
+  color: white;
+}
+
+button[aria-disabled="true"] {
+  background: var(--grey);
+  color: var(--failure);
+  cursor: not-allowed;
 }
 
 .wrapper {
